<resources>
    <string name="app_name">कृषकं</string>
    <string name="facebook_app_id">545765938805456</string>
    <string name="et_name_hint">नाम</string>
    <string name="et_mobile_number">मोबाइल नंबर</string>
    <string name="otp_prapt_kare">ओटीपी प्राप्त करें</string>
    <string name="app_title">कृषकं</string>
    <string name="state">राज्य</string>
    <string name="district">जिला</string>
    <string name="village_name">गांव का नाम</string>
    <string name="aagebadhe">आगे बढे</string>
    <string name="skip_now">इसे बाद में करे</string>
    <string name="submit">जमा करें</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">78888888888</string>
    <string name="title_home">होम </string>
    <string name="video">वीडियो </string>
    <string name="samachar">समाचार</string>
    <string name="lekh">लेख</string>
    <string name="logout">लॉगआउट</string>
    <string name="verify">सत्यापित करें —</string>
    <string name="wrong_number">गलत नंबर ?</string>
    <string name="resendsms">पुन: भेजें</string>
    <string name="emptynumber">फ़ोन नंबर खाली नहीं हो सकता है !</string>
    <string name="emptystate">राज्य खाली नहीं हो सकता है !</string>
    <string name="emptydistrict">जिला खाली नहीं हो सकता है !</string>
    <string name="emptyvillage">गांव का नाम खाली नहीं हो सकता है !</string>
    <string name="uploadImages">अपनी फोटो लगाए !</string>
    <string name="long_text">किस महीने में कौनसी फसल बोना चाहिए जानिए 12 महीने का पूरा फसल चक्र|Smart Business Plus देश-विदेश के किसानो से जुड़ना चाहते हो और खेती से जुडी जानकारी प्राप्त करना चाहते हो, नई नई टेक्निक खेती के लिए सीखना चाहते हैं तो अभी Join और Follow करें Facebook किसान group और पेज को-</string>
    <string name="savedpost">सेव्ड पोस्ट</string>
    <string name="hamerating">हमें रेटिंग दें</string>
    <string name="search">सर्च करे !</string>
    <string name="upyogkishart">उपयोग की शर्त</string>
    <string name="myprofile">मेरी प्रोफाइल</string>
    <string name="mypost">मेरे पोस्ट</string>
    <string name="edit_profile">प्रोफाइल एडिट करे !</string>
    <string name="title_activity_display_message">शेयर करे !</string>
    <string name="video_component_tag">video_container</string>

</resources>
