<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            android:scrollbarThumbVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:focusableInTouchMode="true"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_title"
                    android:textColor="@color/drawable_otp_colour"
                    android:textSize="70sp" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/et_line"
                    android:drawablePadding="5dp"
                    android:textColor="@color/top_view"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:hint="@string/et_name_hint"
                    android:inputType="text"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/top_view"
                    android:backgroundTint="@color/et_line"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_place_black_24dp"
                    android:hint="@string/state"
                    android:drawableEnd="@drawable/ic_expand_more_black_24dp"

                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:backgroundTint="@color/et_line"
                    android:drawablePadding="5dp"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/top_view"
                    android:drawableEnd="@drawable/ic_expand_more_black_24dp"
                    android:drawableStart="@drawable/ic_place_black_24dp"
                    android:hint="@string/district"

                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:backgroundTint="@color/et_line"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_place_black_24dp"
                    android:hint="@string/village_name"
                    android:textColor="@color/top_view"
                    android:inputType="text"
                    android:singleLine="true" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:mrl_rippleColor="@color/drawable_otp_colour_hover"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleRoundedCorners="10dp">

                    <Button
                        android:id="@+id/btn_aage_badhe"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_otp_stroke"
                        android:paddingEnd="@dimen/_40sdp"
                        android:paddingStart="@dimen/_40sdp"
                        android:text="@string/aagebadhe"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/et_line">

                </View>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:mrl_rippleColor="@color/drawable_otp_colour_hover"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleRoundedCorners="10dp">

                    <Button
                        android:id="@+id/btn_baad_me_kare"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/skip_drawable"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/skip_now"
                        android:textColor="@color/et_line"
                        android:textSize="15sp" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>