<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/app_title"
        android:textColor="@color/drawable_otp_colour"
        android:textSize="70sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/et_line"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
                android:hint="@string/et_mobile_number"
                android:inputType="number"
                android:singleLine="true" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/ripple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                app:mrl_rippleColor="@color/drawable_otp_colour_hover"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleRoundedCorners="10dp">

                <Button
                    android:id="@+id/btn_otp_prapt"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_otp_stroke"
                    android:paddingEnd="@dimen/_40sdp"
                    android:paddingStart="@dimen/_40sdp"
                    android:text="@string/otp_prapt_kare"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>